--- a/tutorial-part-two/package.json
+++ b/tutorial-part-two/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.46",
-    "gatsby-plugin-typography": "^1.7.19"
+    "gatsby-plugin-typography": "^1.7.19",
+    "typography-theme-bootstrap": "^0.16.7",
+    "typography-theme-lawton": "^0.15.10"
   }
 }
